// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FaceLabeling /> should render properly 1`] = `
.emotion-0 {
  padding: 16px;
  color: #ffffff;
}

<div
  className="emotion-0"
>
  Select an asset to start adding names to faces and train your model.
</div>
`;

exports[`<FaceLabeling /> should render selected asset with no data 1`] = `
.emotion-0 {
  padding: 16px;
  color: #ffffff;
}

<div
  className="emotion-0"
>
  No faces have been detected in this asset for naming and training. Please select another asset.
</div>
`;

exports[`<FaceLabeling /> should render selected asset with predictions 1`] = `
Array [
  <FaceLabelingTrainApply
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  />,
  .emotion-0 {
  padding: 16px;
  color: #4a90e2;
}

<div
    className="emotion-0"
  >
    TIFF_1MB.tiff
  </div>,
  "",
  .emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  padding: 16px;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: #191919;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-bottom: 16px;
}

.emotion-0 {
  max-height: 64px;
  width: 64px;
  object-fit: contain;
  margin-right: 16px;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-1 {
  padding-bottom: 8px;
  color: #808080;
}

.emotion-2 {
  width: 100%;
  padding: 8px;
  outline: thin solid transparent;
  background-color: #3b3b3b;
  color: #ffffff;
  font-weight: 500;
  border: 2px solid transparent;
  border-radius: 2px;
  margin-bottom: 1px;
}

.emotion-2:hover {
  border: 2px solid #ffffff;
}

.emotion-2:focus {
  background-color: #ffffff;
  color: #000000;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-5,
.emotion-5:hover,
.emotion-5:visited {
  background-color: #808080;
}

.emotion-5:hover {
  background-color: #b3b3b3;
}

.emotion-5[aria-disabled=true] {
  background-color: #808080;
}

.emotion-6 {
  width: 8px;
  min-width: 8px;
}

.emotion-7 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-7:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-7,
.emotion-7:hover,
.emotion-7:visited {
  background-color: #73b61c;
}

.emotion-7:hover {
  background-color: #96c955;
}

.emotion-7[aria-disabled=true] {
  background-color: #808080;
}

<form
    action=""
    className="emotion-9"
    method="post"
    onSubmit={[Function]}
  >
    <div>
      <div
        className="emotion-4"
      >
        <img
          alt={
            Array [
              0.38,
              0.368,
              0.484,
              0.584,
            ]
          }
          className="emotion-0"
          title={
            Array [
              0.38,
              0.368,
              0.484,
              0.584,
            ]
          }
        />
        <div
          className="emotion-3"
        >
          <div
            className="emotion-1"
          >
            Name:
          </div>
          <div
            data-reach-combobox=""
          >
            <input
              aria-autocomplete="both"
              aria-controls="listbox--1"
              aria-expanded={false}
              aria-haspopup="listbox"
              className="emotion-2"
              data-reach-combobox-input=""
              id="MNONPMMKPLRLONLJMRLNM"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="combobox"
              value="face1"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="emotion-8"
    >
      <button
        aria-disabled={true}
        className="emotion-5"
        onClick={[Function]}
        type="button"
      >
        Cancel
      </button>
      <div
        className="emotion-6"
      />
      <button
        aria-disabled={true}
        className="emotion-7"
        onClick={[Function]}
        type="button"
      >
        Saved
      </button>
    </div>
  </form>,
]
`;

exports[`<FaceLabeling /> should render selected asset with predictions 2`] = `
Array [
  <FaceLabelingTrainApply
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  />,
  .emotion-0 {
  padding: 16px;
  color: #4a90e2;
}

<div
    className="emotion-0"
  >
    TIFF_1MB.tiff
  </div>,
  "",
  .emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  padding: 16px;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: #191919;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-bottom: 16px;
}

.emotion-0 {
  max-height: 64px;
  width: 64px;
  object-fit: contain;
  margin-right: 16px;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-1 {
  padding-bottom: 8px;
  color: #808080;
}

.emotion-2 {
  width: 100%;
  padding: 8px;
  outline: thin solid transparent;
  background-color: #3b3b3b;
  color: #ffffff;
  font-weight: 500;
  border: 2px solid transparent;
  border-radius: 2px;
  margin-bottom: 1px;
}

.emotion-2:hover {
  border: 2px solid #ffffff;
}

.emotion-2:focus {
  background-color: #ffffff;
  color: #000000;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  width: 8px;
  min-width: 8px;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-5,
.emotion-5:hover,
.emotion-5:visited {
  background-color: #808080;
}

.emotion-5:hover {
  background-color: #b3b3b3;
}

.emotion-5[aria-disabled=true] {
  background-color: #808080;
}

.emotion-7 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-7:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-7,
.emotion-7:hover,
.emotion-7:visited {
  background-color: #73b61c;
}

.emotion-7:hover {
  background-color: #96c955;
}

.emotion-7[aria-disabled=true] {
  background-color: #808080;
}

<form
    action=""
    className="emotion-9"
    method="post"
    onSubmit={[Function]}
  >
    <div>
      <div
        className="emotion-4"
      >
        <img
          alt={
            Array [
              0.38,
              0.368,
              0.484,
              0.584,
            ]
          }
          className="emotion-0"
          title={
            Array [
              0.38,
              0.368,
              0.484,
              0.584,
            ]
          }
        />
        <div
          className="emotion-3"
        >
          <div
            className="emotion-1"
          >
            Name:
          </div>
          <div
            data-reach-combobox=""
          >
            <input
              aria-autocomplete="both"
              aria-controls="listbox--1"
              aria-expanded={true}
              aria-haspopup="listbox"
              className="emotion-2"
              data-reach-combobox-input=""
              id="MNONPMMKPLRLONLJMRLNM"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="combobox"
              value="Jane"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="emotion-8"
    >
      <button
        className="emotion-5"
        onClick={[Function]}
        type="button"
      >
        Cancel
      </button>
      <div
        className="emotion-6"
      />
      <button
        className="emotion-7"
        onClick={[Function]}
        type="button"
      >
        Save
      </button>
    </div>
  </form>,
]
`;

exports[`<FaceLabeling /> should render selected asset with predictions 3`] = `
Array [
  <FaceLabelingTrainApply
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  />,
  .emotion-0 {
  padding: 16px;
  color: #4a90e2;
}

<div
    className="emotion-0"
  >
    TIFF_1MB.tiff
  </div>,
  .emotion-2 {
  padding: 16px;
  padding-top: 0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #ffb6b2;
  border-radius: 2px;
  padding: 12px;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
}

<div
    className="emotion-2"
  >
    <div
      className="emotion-1"
    >
      <svg
        color="#c92300"
        data-file-name="warning.svg"
        width={20}
      />
      <div
        className="emotion-0"
        role="alert"
      >
        Something went wrong. Please try again.
      </div>
    </div>
  </div>,
  .emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  padding: 16px;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: #191919;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-bottom: 16px;
}

.emotion-0 {
  max-height: 64px;
  width: 64px;
  object-fit: contain;
  margin-right: 16px;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-1 {
  padding-bottom: 8px;
  color: #808080;
}

.emotion-2 {
  width: 100%;
  padding: 8px;
  outline: thin solid transparent;
  background-color: #3b3b3b;
  color: #ffffff;
  font-weight: 500;
  border: 2px solid transparent;
  border-radius: 2px;
  margin-bottom: 1px;
}

.emotion-2:hover {
  border: 2px solid #ffffff;
}

.emotion-2:focus {
  background-color: #ffffff;
  color: #000000;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  width: 8px;
  min-width: 8px;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-5,
.emotion-5:hover,
.emotion-5:visited {
  background-color: #808080;
}

.emotion-5:hover {
  background-color: #b3b3b3;
}

.emotion-5[aria-disabled=true] {
  background-color: #808080;
}

.emotion-7 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-7:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-7,
.emotion-7:hover,
.emotion-7:visited {
  background-color: #73b61c;
}

.emotion-7:hover {
  background-color: #96c955;
}

.emotion-7[aria-disabled=true] {
  background-color: #808080;
}

<form
    action=""
    className="emotion-9"
    method="post"
    onSubmit={[Function]}
  >
    <div>
      <div
        className="emotion-4"
      >
        <img
          alt={
            Array [
              0.38,
              0.368,
              0.484,
              0.584,
            ]
          }
          className="emotion-0"
          title={
            Array [
              0.38,
              0.368,
              0.484,
              0.584,
            ]
          }
        />
        <div
          className="emotion-3"
        >
          <div
            className="emotion-1"
          >
            Name:
          </div>
          <div
            data-reach-combobox=""
          >
            <input
              aria-autocomplete="both"
              aria-controls="listbox--9"
              aria-expanded={false}
              aria-haspopup="listbox"
              className="emotion-2"
              data-reach-combobox-input=""
              id="MNONPMMKPLRLONLJMRLNM"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="combobox"
              value="Jane"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="emotion-8"
    >
      <button
        className="emotion-5"
        onClick={[Function]}
        type="button"
      >
        Cancel
      </button>
      <div
        className="emotion-6"
      />
      <button
        className="emotion-7"
        onClick={[Function]}
        type="button"
      >
        Save
      </button>
    </div>
  </form>,
]
`;
